@@ -51,7 +51,7 @@ public class Vala.CCodeUnaryExpression : CCodeExpression {
 		} else if (operator == CCodeUnaryOperator.BITWISE_COMPLEMENT) {
 			writer.write_string ("~");
 		} else if (operator == CCodeUnaryOperator.POINTER_INDIRECTION) {
-			writer.write_string ("*");
+			writer.write_string ("(*");
 		} else if (operator == CCodeUnaryOperator.ADDRESS_OF) {
 			writer.write_string ("&");
 		} else if (operator == CCodeUnaryOperator.PREFIX_INCREMENT) {
@@ -66,6 +66,8 @@ public class Vala.CCodeUnaryExpression : CCodeExpression {
 			writer.write_string ("++");
 		} else if (operator == CCodeUnaryOperator.POSTFIX_DECREMENT) {
 			writer.write_string ("--");
+		} else if (operator == CCodeUnaryOperator.POINTER_INDIRECTION) {
+			writer.write_string (")");
 		}
 	}
 }
